# flashmlx

./: .gitignore  README.md  autoresearch_bench.sh  bench.py  bench8b.py  bench_compare.py  bench_comparison.py  pyproject.toml
.claude/skills/youtube-transcript/: SKILL.md
autobench/: analyze.py  loop.py  program.md
baselines/: benchmark-2026-04-01.json  benchmark-comprehensive-2026-04-01.json  benchmark-final-2026-04-01.json  benchmark-llama3-8b-2026-04-01.json  compare.py
docs/: autoresearch-log-2026-04-01.tsv  model-configs.md  optimization-notes.md  profiling-guide.md
docs/superpowers/plans/: 2026-04-01-batched-server-plan.md  2026-04-01-flashmlx-plan.md  2026-04-01-mamba2-ssm-plan.md  2026-04-01-moe-support-plan.md  2026-04-02-continuous-batching.md  2026-04-02-left-padded-batch-kv-cache.md  2026-04-02-prefix-caching.md
docs/superpowers/specs/: 2026-04-01-batched-server-design.md  2026-04-01-flashmlx-design.md  2026-04-01-mamba2-ssm-design.md  2026-04-01-moe-support-design.md
engine/: __init__.py  attention.py  fused_ops.py  generate.py  kv_cache.py  model_config.py  quantize.py
harness/: benchmark.py  models.yaml  prepare.py  validate.py
server/: CMakeLists.txt  bench_batch.py  bench_server.py  run.py
server/include/flashmlx/: batch_kv_cache.h  engine.h  kv_pool.h  model.h  sampling.h  scheduler.h
server/python/: app.py  mlx_lm_engine.py  tokenizer.py
server/src/: batch_kv_cache.cpp  engine.cpp  kv_pool.cpp  model.cpp  nemotron_h.cpp  sampling.cpp  scheduler.cpp
server/tests/: test_engine.py  test_heterogeneous_attention.cpp
tests/: test_attention.py  test_benchmark.py  test_generate.py  test_integration.py  test_kv_cache.py  test_loop.py  test_model_config.py  test_quantize.py  test_validate.py
(+1 files in other folders)
